--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <h3>Residente em Engenharia de Software</h3>
               <p class="timeline-company">UEMA / BRISA</p>
               <p class="timeline-date">2025 - O momento</p>
-              <p>Desenvolvimento e manutenção de funcionalidades em um sistema de larga escala, utilizando metodologias ágeis e um stack moderno; Colaboração em equipe para projetar, desenvolver e implementar soluções; Participação em code reviews para garantir a qualidade do código.</p>
+              <p>Integrando o programa de Residência em TIC, uma parceria entre UEMA e BRISA para capacitação avançada de profissionais, estou imerso em um ecossistema de inovação e desenvolvimento de software. A iniciativa visa aprofundar competências práticas para atender a demandas reais do mercado.</p>
             </div>
           </div>
           <div class="timeline-item">
@@ -69,7 +69,7 @@
               <h3>Estagiário de Tecnologia da Informação</h3>
               <p class="timeline-company">OAB (Ordem dos Advogados do Brasil)</p>
               <p class="timeline-date">2023 - 2025</p>
-              <p>Suporte e manutenção da infraestrutura de TI; Desenvolvimento e manutenção de sistemas web internos, como o Atende OAB; Suporte técnico especializado aos usuários.</p>
+              <p>Minha atuação na OAB abrangeu desde o suporte técnico Nível 1 (N1) até o desenvolvimento de software. Tive a iniciativa de criar soluções para problemas internos, como o desenvolvimento do sistema de avaliação de atendimentos, um projeto que implementei para aprimorar a qualidade do suporte técnico da instituição</p>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
     <section id="contact" class="section">
       <div class="container">
         <h2>Contato</h2>
-        <p class="contact-intro">Vamos conversar sobre seu próximo projeto!</p>
+        <p class="contact-intro">Me envie uma mensagem!</p>
         <div class="contact-buttons">
           <a href="mailto:andrelimadev0@gmail.com" class="contact-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
