--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfólio de André Lima - Engenheiro de Software Full-Stack">
-  <title>André Lima | Portfólio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="description" content="Portfólio de André Lima - Engenheiro de Software Full-Stack especializado em React, Node.js e desenvolvimento web moderno">
+  <meta name="keywords" content="André Lima, desenvolvedor, engenheiro de software, full-stack, React, Node.js, TypeScript, portfolio">
+  <meta name="author" content="André Lima">
+  <meta name="theme-color" content="#10b981">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="André Lima | Engenheiro de Software Full-Stack">
+  <meta property="og:description" content="Desenvolvendo soluções web e desktop com ênfase em boas práticas">
+  
+  <title>André Lima | Engenheiro de Software Full-Stack</title>
+  
+  <!-- Preload critical assets -->
+  <link rel="preload" href="assets/style.css" as="style">
   <link rel="stylesheet" href="assets/style.css">
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
